--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pytorchcv==0.0.73
 regex==2024.11.6
 Requests==2.32.3
 scikit_learn==1.4.1.post1
+streamlit>=1.28.0
 setuptools==68.2.2
 torch==2.2.1
 python-multipart
